[gd_scene load_steps=22 format=3 uid="uid://ct1jkcxq0v8cf"]

[ext_resource type="Script" path="res://Jogador/Scripts/CharacterBody2D.gd" id="1_1fpwl"]
[ext_resource type="PackedScene" uid="uid://cisyb23r5wlju" path="res://Jogador/Scenes/Ghost_Effect.tscn" id="2_v1k0g"]
[ext_resource type="Texture2D" uid="uid://cf0q7j8x2rn7u" path="res://Jogador/Assets/Bart/Bart Wayne first sprite (3 rows).png" id="3_rvcdp"]
[ext_resource type="Texture2D" uid="uid://b7peqrtgfgg2x" path="res://Jogador/Assets/Bart/Bart Wayne first sprite (1 row).png" id="4_kpj0j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ac0pt"]
atlas = ExtResource("3_rvcdp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrdmw"]
atlas = ExtResource("3_rvcdp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntfmh"]
atlas = ExtResource("3_rvcdp")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv54f"]
atlas = ExtResource("4_kpj0j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru4qy"]
atlas = ExtResource("4_kpj0j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mikn"]
atlas = ExtResource("4_kpj0j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv23r"]
atlas = ExtResource("4_kpj0j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6uba"]
atlas = ExtResource("4_kpj0j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc73v"]
atlas = ExtResource("4_kpj0j")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuf7j"]
atlas = ExtResource("4_kpj0j")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abuyx"]
atlas = ExtResource("4_kpj0j")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_17cnu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac0pt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrdmw")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntfmh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv54f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru4qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mikn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv23r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6uba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc73v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuf7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abuyx")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w56ve"]
radius = 18.0
height = 58.0

[sub_resource type="Animation" id="Animation_0sb43"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_5pboc"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dqkul"]
resource_name = "run"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rvvwg"]
_data = {
"RESET": SubResource("Animation_0sb43"),
"idle": SubResource("Animation_5pboc"),
"run": SubResource("Animation_dqkul")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 2
script = ExtResource("1_1fpwl")
ghost_effect = ExtResource("2_v1k0g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_17cnu")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2, 5)
shape = SubResource("CapsuleShape2D_w56ve")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_rvvwg")
}

[node name="Sounds" type="AudioStreamPlayer2D" parent="."]
attenuation = 0.366022

[node name="Sounds2" type="AudioStreamPlayer2D" parent="."]

[node name="Timers" type="Node2D" parent="."]

[node name="Dash_lenght" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Dash_cooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="Ghost_Timer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="Shoot_Reference" type="Marker2D" parent="."]
position = Vector2(0, 6)

[connection signal="timeout" from="Timers/Ghost_Timer" to="." method="_on_ghost_timer_timeout"]
